# sun_etherCAT

./: CMakeLists.txt  Cycle_time.txt  Data_error.txt  Data_position_Joint6.txt
Dati_test/: GetData.m
src/: main_master.cpp  main_master_MECA500.txt  main_master_forceSensor.txt  main_position_control.cpp
sun_EtherCAT_Gateway/sun_EtherCAT_Gateway/: sun_EtherCAT_Gateway.ino  sun_EtherCAT_Gateway_versione1.ino
sun_EtherCAT_Gateway/sun_EtherCAT_Gateway/sun_gateway_prova.ino/: sun_gateway_prova.ino.ino
sun_EtherCAT_Gateway/sun_EtherCAT_Gateway_flag/: sun_EtherCAT_Gateway_flag.ino
sun_EtherCAT_Gateway/sun_EtherCAT_Gateway_noPrint/: sun_EtherCAT_Gateway_noPrint.ino
sun_controller/: Makefile  cmake_install.cmake
sun_controller/include/: Controller.h  Controller_force.h
sun_controller/src/: Controller.cpp  Controller_force.cpp  Controller_posizione_polinomio.txt  Controller_posizione_seno.txt
sun_ethercat_master/: CMakeLists.txt  Makefile  cmake_install.cmake
sun_ethercat_master/include/: Master.h
sun_ethercat_master/src/: Master.cpp
sun_scheduling/: Makefile  cmake_install.cmake
sun_slave/: Makefile  cmake_install.cmake
sun_slave/include/: ATINano43.h  Meca500.h  Meca500_versione1.h
sun_slave/src/: ATINano43.cpp  Meca500.cpp  Meca500_versione1.cpp
